# fri

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  NOTICE  README.md  friClientVersion.h.in  friVersion.h.in  package.xml  todo  ubuntu_doc
.github/workflows/: build.yaml
apps/: CMakeLists.txt
apps/IOAccess/: IOAccessApp.cpp  IOAccessClient.cpp  IOAccessClient.h  Makefile
apps/LBRClientTemplate/: Makefile  MyLBRApp.cpp  MyLBRClient.cpp  MyLBRClient.h
apps/LBRJointSineOverlay/: LBRJointSineOverlayApp.cpp  LBRJointSineOverlayClient.cpp  LBRJointSineOverlayClient.h  Makefile
apps/LBRTorqueSineOverlay/: LBRTorqueSineOverlayApp.cpp  LBRTorqueSineOverlayClient.cpp  LBRTorqueSineOverlayClient.h  Makefile
apps/LBRWrenchSineOverlay/: LBRWrenchSineOverlayApp.cpp  LBRWrenchSineOverlayClient.cpp  LBRWrenchSineOverlayClient.h  Makefile
apps/SimulatedTransformationProvider/: Makefile  SimulatedData.inc  SimulatedTransformationProviderApp.cpp  SimulatedTransformationProviderClient.cpp  SimulatedTransformationProviderClient.h
apps/TransformationProvider/: Makefile  TransformationProviderApp.cpp  TransformationProviderClient.cpp  TransformationProviderClient.h
client_sdk/fri/: CMakeLists.txt  LICENSE  package.xml
client_sdk/fri/include/: friConnectionIf.h  friTransformationClient.h
client_sdk/fri/include/fri/: friClientApplication.h  friClientData.h  friClientIf.h  friCommandMessageEncoder.h  friConnectionIf.h  friDataHelper.h  friException.h  friLBRClient.h  friLBRCommand.h  friLBRState.h  friTransformationClient.h  friUdpConnection.h  pb_frimessages_callbacks.h
client_sdk/fri/src/: FRIMessages.pb.c  FRIMessages.pb.h  friClientApplication.cpp  friClientData.h  friCommandMessageEncoder.cpp  friCommandMessageEncoder.h  friDataHelper.cpp  friLBRClient.cpp  friLBRCommand.cpp  friLBRState.cpp  friMonitoringMessageDecoder.cpp  friMonitoringMessageDecoder.h  friTransformationClient.cpp  friUdpConnection.cpp  pb_frimessages_callbacks.c  pb_frimessages_callbacks.h
client_sdk/fri/src/base/: Makefile  friClientApplication.cpp  friDataHelper.cpp
client_sdk/fri/src/connection/: friUdpConnection.cpp
client_sdk/fri/src/protobuf/: friCommandMessageEncoder.cpp
client_sdk/nanopb/: CMakeLists.txt  package.xml
client_sdk/nanopb/include/nanopb/: pb.h  pb_decode.h  pb_encode.h  pb_syshdr.h  pb_syshdr_win.h
client_sdk/nanopb/src/: pb_decode.c  pb_encode.c
cmake/: FRIConfig.cmake.in
doc/: fri.rst  fri_notes.txt.txt
docs/html/: FRI__Descr_8dox.html  annotated.html  classKUKA_1_1FRI_1_1FRIException-members.html  classKUKA_1_1FRI_1_1IClient-members.html  classKUKA_1_1FRI_1_1IClient.html  (+21 more)
fri/: CMakeLists.txt  package.xml
fri/doc/html/: FRI__Descr_8dox.html  annotated.html  classKUKA_1_1FRI_1_1ClientApplication-members.html  classKUKA_1_1FRI_1_1ClientApplication.html  classKUKA_1_1FRI_1_1FRIException-members.html  classKUKA_1_1FRI_1_1FRIException.html  classKUKA_1_1FRI_1_1IClient-members.html  classKUKA_1_1FRI_1_1IClient.html  classKUKA_1_1FRI_1_1IConnection-members.html  classKUKA_1_1FRI_1_1IConnection.html  classKUKA_1_1FRI_1_1LBRClient-members.html  classKUKA_1_1FRI_1_1LBRClient.html  classKUKA_1_1FRI_1_1LBRCommand-members.html  classKUKA_1_1FRI_1_1LBRCommand.html  classKUKA_1_1FRI_1_1LBRState-members.html  classKUKA_1_1FRI_1_1LBRState.html  classKUKA_1_1FRI_1_1TransformationClient-members.html  classKUKA_1_1FRI_1_1TransformationClient.html  classKUKA_1_1FRI_1_1UdpConnection-members.html  classKUKA_1_1FRI_1_1UdpConnection.html  classes.html  files.html  friClientApplication_8h.html  friClientApplication_8h_source.html  friClientIf_8h.html  friClientIf_8h_source.html  friConnectionIf_8h.html  friConnectionIf_8h_source.html  friDataHelper_8h.html  friDataHelper_8h_source.html  friException_8h.html  friException_8h_source.html  friLBRClient_8h.html  friLBRClient_8h_source.html  friLBRCommand_8h.html  friLBRCommand_8h_source.html  friLBRState_8h.html  friLBRState_8h_source.html  friTransformationClient_8h.html  friTransformationClient_8h_source.html  (+20 more)
fri/docs/html/: classKUKA_1_1FRI_1_1ClientApplication-members.html  classKUKA_1_1FRI_1_1ClientApplication.html  classKUKA_1_1FRI_1_1FRIException.html  classKUKA_1_1FRI_1_1IConnection-members.html  classKUKA_1_1FRI_1_1LBRClient.html  classKUKA_1_1FRI_1_1LBRState-members.html  classKUKA_1_1FRI_1_1TransformationClient-members.html  classKUKA_1_1FRI_1_1UdpConnection-members.html  classes.html  files.html  friClientApplication_8h.html  friClientApplication_8h_source.html  friConnectionIf_8h.html  friConnectionIf_8h_source.html  friLBRClient_8h.html  friLBRClient_8h_source.html  friLBRCommand_8h.html  friLBRCommand_8h_source.html  friLBRState_8h.html  friTransformationClient_8h.html  friTransformationClient_8h_source.html  friUdpConnection_8h_source.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  namespaceKUKA_1_1FRI.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html
fri/include/: friClientIf.h  friLBRClient.h
fri/include/fri/: friClientIf.h  friException.h  friLBRCommand.h  friLBRState.h  friMonitoringMessageDecoder.h
fri/src/: friClientApplication.cpp  friClientData.h  friLBRClient.cpp  friLBRCommand.cpp  friLBRState.cpp  friMonitoringMessageDecoder.cpp  friTransformationClient.cpp
fri/src/base/: friClientData.h
fri/src/client_lbr/: Makefile  friLBRClient.cpp  friLBRCommand.cpp  friLBRState.cpp
fri/src/client_trafo/: friTransformationClient.cpp
fri/src/nanopb-0.2.8/: pb.h
fri/src/protobuf/: friCommandMessageEncoder.h  pb_frimessages_callbacks.c  pb_frimessages_callbacks.h
img/: adapter_settings.txt  ubuntu_doc
nanopb/: CMakeLists.txt  package.xml
server_app/: LBRServer.java
src/: FRIMessages.pb.c  FRIMessages.pb.h  friClientApplication.cpp  friClientData.h  friCommandMessageEncoder.cpp  friCommandMessageEncoder.h  friLBRClient.cpp  friLBRCommand.cpp  friLBRState.cpp  friMonitoringMessageDecoder.cpp  friMonitoringMessageDecoder.h  friTransformationClient.cpp  friUdpConnection.cpp  pb_frimessages_callbacks.c  pb_frimessages_callbacks.h
(+31 files in other folders)
