<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nanopb</name>
  <version>1.0.0</version>
  <description>Nanopb with ROS2 build system</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>see LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
