<?xml version="1.0"?>
<package format="2">
  <name>nanopb</name>
  <version>0.0.0</version>
  <description>NanoPB with ROS build system</description>

  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>see LICENSE</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
