<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fri</name>
  <version>1.0.0</version>
  <description>KUKA fast robot interface with ROS 2 build system.</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <maintainer email="christopher.mower@kcl.ac.uk">cmower</maintainer>
  <license>see LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nanopb</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
